# psi

./: .gitignore  CLAUDE.md  README.md  SPEC.md  base.sqfs  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  test.yml
examples/simple_example/: AGENT.md
examples/simple_example/skills/example/: SKILL.md
examples/simple_example/systems/: builder.py
examples/simple_example/tools/: bash.py  read_file.py
src/psi_agent/: __init__.py
src/psi_agent/ai/: __init__.py
src/psi_agent/ai/openai/: __init__.py
src/psi_agent/channel/: __init__.py
src/psi_agent/channel/tui/: __init__.py
src/psi_agent/session/: __init__.py
src/psi_ai/: __init__.py
src/psi_ai/openai/: __init__.py
src/psi_channel/: __init__.py
src/psi_channel/tui/: __init__.py
src/psi_common/: __init__.py  protocol.py
src/psi_session/: __init__.py
src/psi_workspace/: __init__.py
tests/: test_ai.py  test_protocol.py  test_session.py  test_workspace.py
tests/integration/: __init__.py  test_ai_session.py  test_session_channel.py
tests/unit/: __init__.py  test_ai.py  test_channel.py  test_protocol.py  test_session.py  test_workspace.py
