[project]
name = "psi"
version = "0.1.0"
description = "Psi Agent Platform - portable, composable AI agents"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "aiosqlite>=0.19.0",
    "prompt-toolkit>=3.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "tyro>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "ty>=0.0.31",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
psi-session = "psi_session:main"
psi-channel-tui = "psi_channel.tui:main"
psi-ai-openai = "psi_ai.openai:main"
psi-workspace = "psi_workspace:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psi_session", "src/psi_channel", "src/psi_ai", "src/psi_workspace", "src/psi_common"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["psi_session", "psi_channel", "psi_ai", "psi_workspace", "psi_common"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
