[project]
name = "psi-agent"
dynamic = ["version"]
description = "Psi Agent Platform - portable, composable AI agents"
authors = [{name = "Hao Zhang", email = "hzhangxyz@outlook.com"}]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.34.0",
    "aiosqlite>=0.19.0",
    "prompt-toolkit>=3.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "tyro>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/hzhangxyz/psi"
Repository = "https://github.com/hzhangxyz/psi"
Issues = "https://github.com/hzhangxyz/psi/issues"
Documentation = "https://github.com/hzhangxyz/psi#readme"

[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.1.0",
]

[project.scripts]
psi-session = "psi_agent.session:main"
psi-channel-tui = "psi_agent.channel.tui:main"
psi-ai-openai = "psi_agent.ai.openai:main"
psi-workspace-create = "psi_agent.workspace:main_create"
psi-workspace-mount = "psi_agent.workspace:main_mount"
psi-workspace-umount = "psi_agent.workspace:main_umount"
psi-workspace-snapshot = "psi_agent.workspace:main_snapshot"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.targets.wheel]
packages = ["src/psi_agent"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["psi_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
